--- a/ChangeShape/index.html
+++ b/ChangeShape/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Change shape or color</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div id = "container">
@@ -19,7 +19,7 @@
         </div>
 
     </div>
-    <script type="" src = "script.js">
+    <script type="" src = "./script.js">
 
     </script>
 </body>
