--- a/WeekTest4/index.html
+++ b/WeekTest4/index.html
@@ -1,249 +1,166 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <title>Hunting Phone</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./style.css" /> <!-- Link to your custom CSS file -->
-    <!-- Define your custom CSS styles here -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Phone Hunting API</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@3.6.2/dist/full.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <script src="./script.js" defer></script>
     <style>
-        /* Add your custom CSS styles here */
-        body {
-            font-family: Arial, sans-serif;
-        }
-
-        /* Example styles for the header */
-        #head {
-            background-color: #333;
-            color: white;
-            padding: 10px;
-            text-align: center;
-        }
-
-        #signup {
-            background-color: #007bff;
-            color: white;
-            border: none;
-            width: 40px;
-            border-radius: 5px;
-            cursor: pointer;
-            text-align: center;
-        }
-
-        /* Example styles for the product cards */
-        .pro13 {
-            background-color: #f0f0f0;
-            padding: 20px;
-            border-radius: 10px;
-        }
-
-        .pro13 h1 {
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        .pro13 p {
-            font-size: 16px;
-            line-height: 1.5;
-            margin-bottom: 20px;
-        }
-
-        .pro13 button {
-            background-color: #007bff;
-            color: white;
-            border: none;
-        
-            border-radius: 5px;
-            cursor: pointer;
-        }
+      .body {
+        font-family: "Poppins", sans-serif;
+      }
     </style>
-</head>
-<body>
-    <header id="head">
-        <p>Hot Gadgets</p>
-        <button id="signup">SIGNUP</button>
+  </head>
+  <body class="body">
+    <nav class="flex justify-between py-10 px-20 bg-[#0d6efd0d]">
+      <h2 class="text-2xl font-bold">Hot Gadgets</h2>
+      <button class="btn btn-primary text-white">Sign Up</button>
+    </nav>
+    <header>
+      <section class="bg-[#0d6efd0d] pb-96">
+        <h1 class="text-6xl font-bold text-center">Apple Iphone 13 Pro Max</h1>
+        <p class="text-lg text-center my-6">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority <br />
+          have suffered alteration in some form, by injected humou.
+        </p>
+        <div class="flex justify-center">
+          <button class="btn btn-primary text-white">Buy Now</button>
+        </div>
+      </section>
+      <section>
+        <div
+          class="grid grid-cols-3 lg:flex lg:justify-center items-end relative bottom-80 -mb-72"
+        >
+          <img src="./images/pngwing 2.png" alt="" />
+          <img src="./images/pngwing 1.png" alt="" />
+          <img src="./images/pngwing 2.png" alt="" />
+        </div>
+      </section>
+      <h1 class="text-4xl text-center font-bold my-10">Search Your Phone</h1>
     </header>
-    <br />
-    <div class="container-fluid">
-        <div class="col-12">
-            <div class="row">
-                <div class="col-lg-6 sm-2 pro13">
-                    <h1>Apple Iphone 13 Pro Max</h1>
-                    <p>
-                        There are many variations of passages of Lorem Ipsum available,
-                        but the majority have suffered alteration in some form, by
-                        injected humou.
-                    </p>
-                    <button type="button" class="primary">Buy Now</button>
-                </div>
-            </div>
+    <main>
+      <section class="flex justify-center items-center gap-2">
+        <input
+          id="searchField"
+          type="text"
+          placeholder="e.g. oppo, samsung, iphone"
+          class="input input-bordered w-full max-w-xs my-5"
+        />
+        <button onclick="searchHandler()" class="btn btn-primary text-white">
+          Search
+        </button>
+      </section>
+      <section>
+        <div class="text-center my-40 hidden" id="loading">
+          <h1>Searching</h1>
+          <span class="loading loading-ring loading-lg"></span>
         </div>
-    </div>
-    <br />
-    <div class="container-fluid">
-        <div class="col-12">
-            <div class="row images">
-                <div class="col-lg-4 sm-2 pro13img">
-                    <img src="https://tasmim-tahsin.github.io/PhoneHuntingAPI/images/pngwing%202.png" alt="iphone13 series images" />
-                </div>
-                <div class="col-lg-4 sm-2 pro13img">
-                    <img src="https://tasmim-tahsin.github.io/PhoneHuntingAPI/images/pngwing%201.png" alt="iphone13 series images" />
-                </div>
-                <div class="col-lg-4 sm-2 pro13img">
-                    <img src="https://tasmim-tahsin.github.io/PhoneHuntingAPI/images/pngwing%202.png" alt="iphone13 series images" />
-                </div>
-            </div>
-        </div>
-    </div>
-    <br />
-    <div class="container-fluid">
-        <div class="col-12">
-            <div class="row pnonesearchm">
-                <div class="col-lg-6 sm-2 pnonesearch">
-                    <h1>Search Your Phone</h1>
-                    <input type="text" class="form-control" id="searchval" placeholder="e.g. iphone,samsung,realme" />
-                    <button type="button" class="primary" id="search">Search</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <br />
-    <br />
-    <br />
-    <div id="one">
-        <div class="card-group">
-            <div class="card">
-                <img class="" src="https://fdn2.gsmarena.com/vv/bigpic/apple-iphone-13-mini.jpg" alt="Card image cap" height="230px" width="180px" />
-                <div class="card-body">
-                    <h4 class="card-title">iPhone 13 mini</h4>
-                    <p class="card-text">
-                        There are many variations of passages of available, but the
-                        majority have suffered
-                    </p>
-                    <button id="show-Details">SHOW DETAILS</button>
-                </div>
-            </div>
-            <br />
-            <div class="card">
-                <img class="" src="https://fdn2.gsmarena.com/vv/bigpic/apple-iphone-13-pro.jpg" alt="Card image cap" height="230px" width="180px" />
-                <div class="card-body">
-                    <h4 class="card-title">iPhone 13 Pro</h4>
-                    <p class="card-text">
-                        There are many variations of passages of available, but the
-                        majority have suffered
-                    </p>
-                    <button id="show-Details">SHOW DETAILS</button>
-                  </div>
-              </div>
-              <br />
-              <div class="card">
-                  <img class="" src="https://fdn2.gsmarena.com/vv/bigpic/apple-iphone-13-pro-max.jpg" alt="Card image cap" height="230px" width="180px" />
-                  <div class="card-body">
-                      <h4 class="card-title">iPhone 13 Pro Max</h4>
-                      <p class="card-text">
-                          There are many variations of passages of available, but the
-                          majority have suffered
-                      </p>
-                      <button id="show-Details">SHOW DETAILS</button>
-                  </div>
-              </div>
-          </div>
-          <br />
-          <div class="card-group">
-              <div class="card">
-                  <img class="" src="https://fdn2.gsmarena.com/vv/bigpic/apple-iphone-13.jpg" alt="Card image cap" height="230px" width="180px" />
-                  <div class="card-body">
-                      <h4 class="card-title">iPhone 13</h4>
-                      <p class="card-text">
-                          There are many variations of passages of available, but the
-                          majority have suffered
-                      </p>
-                      <button id="show-Details">SHOW DETAILS</button>
-                  </div>
-              </div>
-              <br />
-              <div class="card">
-                  <img class="" src="https://fdn2.gsmarena.com/vv/bigpic/samsung-galaxy-a13-5g-.jpg" alt="Card image cap" height="230px" width="180px" />
-                  <div class="card-body">
-                      <h4 class="card-title">Galaxy A13 5G</h4>
-                      <p class="card-text">
-                          There are many variations of passages of available, but the
-                          majority have suffered
-                      </p>
-                      <button id="show-Details">SHOW DETAILS</button>
-                  </div>
-              </div>
-              <br />
-              <div class="card">
-                  <img class="" src="https://fdn2.gsmarena.com/vv/bigpic/oppo-find-x5-pro.jpg" alt="Card image cap" height="230px" width="180px" />
-                  <div class="card-body">
-                      <h4 class="card-title">oppo find X5 Pro</h4>
-                      <p class="card-text">
-                          There are many variations of passages of available, but the
-                          majority have suffered
-                      </p>
-                      <button id="show-Details">SHOW DETAILS</button>
-                  </div>
-              </div>
-          </div>
+
+        <div
+          id="phone-container"
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 mx-8 my-5"
+        ></div>
+      </section>
+      <div class="flex justify-center my-8" id="showALLBtn">
+        <button onclick="showBtn()" class="btn btn-primary text-white">
+          Show All
+        </button>
       </div>
-      <br />
-      <br />
-      <div id="two"></div>
-      <br />
-      <br />
-      <div id="container">
-          <br />
-          <div id="main1">
-              <img class="" src=" https://fdn2.gsmarena.com/vv/bigpic/apple-iphone-13-mini.jpg" alt="Card image cap" height="230px" width="180px" />
-              <h4 class="card-title" id="ajay">iPhone 13 mini</h4>
-              <p>Brand:apple</p>
-              <p>storage: 128GB/256GB/1TB storage, no card slot</p>
-              <p>
-                  displaySize: 6.7 inches, 109.8 cm2 (~87.4% screen-to-body ratio)
-                  <br />
-                  chipSet: Apple A15 Bionic (5 nm) <br />
-                  memory: 128GB 6GB RAM, 256GB 6GB RAM, 512GB 6GB RAM, 1TB 6GB RAM
-              </p>
-              <p>releaseDate: 'Released 2021, September 24'</p>
-              <!-- <p class="card-text">There are many variations of passages of available, but the majority have
-                  suffered
-              </p> -->
-              <button id="close">Close</button>
-          </div>
+      <section>
+        <dialog id="my_modal" class="modal modal-bottom sm:modal-middle">
+          <form method="dialog" class="modal-box text-center">
+            <div id="imgContainer" class="flex justify-center"></div>
+            <h3 id="detailsPhoneName" class="font-bold text-lg mt-3"></h3>
+            <h3 id="detailsBrand" class="py-4"></h3>
+            <p id="detailsSpec"></p>
+            <p id="releaseDate" class="my-2"></p>
+
+            <div class="modal-action flex justify-center">
+              <button class="btn bg-red-600 text-white">Close</button>
+            </div>
+          </form>
+        </dialog>
+      </section>
+    </main>
+    <footer
+      class="footer footer-center p-10 bg-[#0d6efd0d] text-white mt-20 py-32"
+    >
+      <div class="text-lg">
+        <svg
+          width="50"
+          height="50"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          class="inline-block fill-current"
+        >
+          <path
+            d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"
+          ></path>
+        </svg>
+        <p class="font-bold">
+          Hot Gadgets BD <br />Providing reliable tech items since 1992
+        </p>
+        <p>Copyright © 2023 - All right reserved</p>
+        <p>
+          <span class="text-red-500"> &#10084;</span> Anupam Yadav
+          <span class="text-red-500"> &#10084;</span>
+        </p>
       </div>
-      <br />
-      <br />
-      <br />
-      <div class="container-fluid mainfooter">
-          <div class="col-12">
-              <div class="row pnonesearchm">
-                  <div class="col-lg-6 sm-2 footer">
-                      <h1><i class="bi bi-hash"></i></h1>
-                      <p id="hot">Hot Gadgets BD</p>
-                      <p id="hot">Providing reliable tech items since 1992</p>
-                      <p id="copy">
-                          Copyright
-                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-c-circle" viewBox="0 0 16 16">
-                              <path d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 1 1 1m16 0A8 8 0 0 1 16 8a8 8 0 0 1-8 8m-6.875-5.488c-.088-.879-.768-1.512-1.729-1.512" />
-                            </svg>
-                            2023 - All right reserved
-                            </p>
-                            <div id="icons">
-                            <i class="bi bi-twitter"></i>
-                            <i class="bi bi-youtube"></i>
-                            <i class="bi bi-facebook"></i>
-                            </div>
-                            </div>
-                            </div>
-                            </div>
-                            </div>
-                            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-                            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-                            <script src="./script.js"></script> <!-- Link to your JavaScript file -->
-                            
-                            </body>
-                            </html>
-  
+      <div>
+        <div class="grid grid-flow-col gap-4 text-white">
+          <a
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              class="fill-current"
+            >
+              <path
+                d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"
+              ></path></svg
+          ></a>
+          <a
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              class="fill-current"
+            >
+              <path
+                d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"
+              ></path></svg
+          ></a>
+          <a
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              class="fill-current"
+            >
+              <path
+                d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
+              ></path></svg
+          ></a>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
